objects/blng__FinancePeriod__c.object
<CustomObject>
    <fields>
        <fullName>ApexContext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApexContext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finance_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Family__c</fullName>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBook__c</fullName>
        <label>Finance Book</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__FinanceBook__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Finance Periods</relationshipLabel>
        <relationshipName>FinancePeriods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriodFamily__c</fullName>
        <externalId>true</externalId>
        <label>Finance Period Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__LegalEntity__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Finance Periods</relationshipLabel>
        <relationshipName>FinancePeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__NextOpenPeriod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Open Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PeriodEndDate__c</fullName>
        <label>Period End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PeriodStartDate__c</fullName>
        <label>Period Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PeriodStatus__c</fullName>
        <label>Period Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__FinancialPeriodStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PeriodType__c</fullName>
        <formula>Text(blng__FinanceBook__r.blng__PeriodType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Finance Period</label>
    <listViews>
        <fullName>Closed_Periods</fullName>
        <columns>NAME</columns>
        <columns>blng__FinanceBook__c</columns>
        <columns>blng__FinancePeriodFamily__c</columns>
        <columns>blng__LegalEntity__c</columns>
        <columns>blng__NextOpenPeriod__c</columns>
        <columns>blng__Notes__c</columns>
        <columns>blng__PeriodEndDate__c</columns>
        <columns>blng__PeriodStartDate__c</columns>
        <columns>blng__PeriodStatus__c</columns>
        <columns>blng__PeriodType__c</columns>
        <columns>blng__ReferenceId__c</columns>
        <columns>blng__UniqueId__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>blng__PeriodStatus__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Periods</label>
    </listViews>
    <listViews>
        <fullName>North_America_US_GAAP_PRIMARY</fullName>
        <columns>NAME</columns>
        <columns>blng__PeriodStartDate__c</columns>
        <columns>blng__PeriodEndDate__c</columns>
        <columns>blng__FinanceBook__c</columns>
        <columns>blng__PeriodType__c</columns>
        <columns>blng__PeriodStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>blng__FinanceBook__c</field>
            <operation>equals</operation>
            <value>North America - US GAAP - PRIMARY</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>blng__LegalEntity__c</field>
            <operation>equals</operation>
            <value>CORPORATE-US</value>
        </filters>
        <label>North America - US GAAP - PRIMARY - USD</label>
    </listViews>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__FinanceBook__c</columns>
        <columns>blng__FinancePeriodFamily__c</columns>
        <columns>blng__LegalEntity__c</columns>
        <columns>blng__NextOpenPeriod__c</columns>
        <columns>blng__Notes__c</columns>
        <columns>blng__PeriodStartDate__c</columns>
        <columns>blng__PeriodEndDate__c</columns>
        <columns>blng__PeriodStatus__c</columns>
        <columns>blng__PeriodType__c</columns>
        <columns>blng__ReferenceId__c</columns>
        <columns>blng__UniqueId__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_Close_Period_without_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>and(NOT(ispickval(ApprovalStatus__c,&quot;Approved&quot;)),(ispickval( blng__PeriodStatus__c ,&quot;Closed&quot;)),ApexContext__c == true)</errorConditionFormula>
        <errorMessage>Finance Period must be Approved before Closing</errorMessage>
    </validationRules>
</CustomObject>